--- a/cart.html
+++ b/cart.html
@@ -7,7 +7,7 @@
     <link type="text/css" rel="stylesheet" href="/javax.faces.resource/order02.css">
     <link type="text/css" rel="stylesheet" href="/javax.faces.resource/components.css">
     <script type="text/javascript" src="/javax.faces.resource/jquery/jquery.js"></script>
-    <!-- <link id="custom" type="text/css" rel="stylesheet" href="./styles.css" /> -->
+    <link id="custom" type="text/css" rel="stylesheet" href="./styles.css" />
 
     <script type="text/javascript" src="/javax.faces.resource/jquery/jquery-plugins.js"></script>
     <script type="text/javascript" src="/javax.faces.resource/core.js"></script>
