try remove label

--- a/cart.html
+++ b/cart.html
@@ -774,9 +774,7 @@
                                                     class="ui-widget-content ui-datatable-even rb-req-confirmation"
                                                     role="row">
                                                     <td role="gridcell" style="text-align: center;"><span
-                                                            class="ui-column-title">Item</span><label
-                                                            id="orderForm:itemdtbsk:0:itempdt"
-                                                            style="font-weight: bold;">FULL DAY 6 HOURS (BOARD)</label>
+                                                            class="ui-column-title">Item</span>
                                                         <div id="orderForm:itemdtbsk:0:bskitempdtopt"
                                                             class="ui-datagrid ui-widget"
                                                             style="margin-top: 5px; margin-bottom:10px; font-size: 0.9em;">
@@ -941,9 +939,7 @@
                                                     class="ui-widget-content ui-datatable-odd rb-req-confirmation"
                                                     role="row">
                                                     <td role="gridcell" style="text-align: center;"><span
-                                                            class="ui-column-title">Item</span><label
-                                                            id="orderForm:itemdtbsk:1:itempdt"
-                                                            style="font-weight: bold;">Babysitting - 1 Child</label>
+                                                            class="ui-column-title">Item</span>
                                                         <div id="orderForm:itemdtbsk:1:bskitempdtopt"
                                                             class="ui-datagrid ui-widget"
                                                             style="margin-top: 5px; margin-bottom:10px; font-size: 0.9em;">
