--- a/cart.html
+++ b/cart.html
@@ -1,6 +1,6 @@
 
 
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+<!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 
 <head id="j_idt2">
     <link type="text/css" rel="stylesheet" href="https://nisade.evoke.jp/javax.faces.resource/theme.css.jsf?ln=primefaces-omega">
