change import file

--- a/cart.html
+++ b/cart.html
@@ -3,23 +3,23 @@
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 
 <head id="j_idt2">
-    <link type="text/css" rel="stylesheet" href="https://nisade.evoke.jp/javax.faces.resource/theme.css.jsf?ln=primefaces-omega">
+    <link type="text/css" rel="stylesheet" href="/javax.faces.resource/theme.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link type="text/css" rel="stylesheet" href="https://nisade.evoke.jp/javax.faces.resource/primeflex.css.jsf?ln=css">
-    <link type="text/css" rel="stylesheet" href="https://nisade.evoke.jp/javax.faces.resource/order02.css.jsf?ln=css">
-    <link type="text/css" rel="stylesheet" href="https://nisade.evoke.jp/javax.faces.resource/components.css.jsf?ln=primefaces&v=6.1.19">
-    <script type="text/javascript" src="https://nisade.evoke.jp/javax.faces.resource/jquery/jquery.js.jsf?ln=primefaces&v=6.1.19"></script>
-    <link id="custom" type="text/css" rel="stylesheet" href="styles.css" />
+    <link type="text/css" rel="stylesheet" href="/javax.faces.resource/primeflex.css">
+    <link type="text/css" rel="stylesheet" href="/javax.faces.resource/order02.css">
+    <link type="text/css" rel="stylesheet" href="/javax.faces.resource/components.css">
+    <script type="text/javascript" src="/javax.faces.resource/jquery/jquery.js"></script>
+    <link id="custom" type="text/css" rel="stylesheet" href="./styles.css" />
 
-    <script type="text/javascript" src="https://nisade.evoke.jp/javax.faces.resource/jquery/jquery-plugins.js.jsf?ln=primefaces&v=6.1.19"></script>
-    <script type="text/javascript" src="https://nisade.evoke.jp/javax.faces.resource/core.js.jsf?ln=primefaces&v=6.1.19"></script>
-    <script type="text/javascript" src="https://nisade.evoke.jp/javax.faces.resource/components.js.jsf?ln=primefaces&v=6.1.19"></script>
-    <link type="text/css" rel="stylesheet" href="https://nisade.evoke.jp/javax.faces.resource/watermark/watermark.css.jsf?ln=primefaces&v=6.1.19">
-    <script type="text/javascript" src="https://nisade.evoke.jp/javax.faces.resource/watermark/watermark.js.jsf?ln=primefaces&v=6.1.19"></script>
-    <link type="text/css" rel="stylesheet" href="https://nisade.evoke.jp/javax.faces.resource/fileupload/fileupload.css.jsf?ln=primefaces&v=6.1.19">
+    <script type="text/javascript" src="/javax.faces.resource/jquery/jquery-plugins.js"></script>
+    <script type="text/javascript" src="/javax.faces.resource/core.js"></script>
+    <script type="text/javascript" src="/javax.faces.resource/components.js"></script>
+    <link type="text/css" rel="stylesheet" href="/javax.faces.resource/watermark/watermark.css">
+    <script type="text/javascript" src="/javax.faces.resource/watermark/watermark.js"></script>
+    <link type="text/css" rel="stylesheet" href="/javax.faces.resource/fileupload/fileupload.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <script type="text/javascript" src="https://nisade.evoke.jp/javax.faces.resource/fileupload/fileupload.js.jsf?ln=primefaces&v=6.1.19"></script>
+    <script type="text/javascript" src="/javax.faces.resource/fileupload/fileupload.js"></script>
     <script type="text/javascript">if (window.PrimeFaces) { PrimeFaces.settings.locale = 'fr'; }</script>
     <link href="https://nisade.evoke.jp/template/default/css/base_desk_layout.css" rel="stylesheet" type="text/css">
 
